--- a/math-ia-fistDraft.tex
+++ b/math-ia-fistDraft.tex
@@ -23,7 +23,7 @@
 \setlength{\textwidth}{150mm}
 
 \begin{comment}
-\pagestyle{empty} % doenst count for page numbers
+\pagestyle{empty} % doesn't count for page numbers
 \end{comment}
 
 
@@ -31,7 +31,7 @@
 
     \begin{titlepage}
         \begin{center}
-            {\LARGE Determining the optimal orbit of polar sattelites}
+            {\LARGE Determining the optimal orbit of polar satellites}
             \break
             {\large A Mathematical exploration}
             \break
@@ -46,13 +46,10 @@
         \end{center}
     \end{titlepage}
 
-    \section{Introduction}
-    hello this is an Introduction and we can add cool symbold like $\theta$ and $\alpha$
-    \break 
-    You can also add equations, watch this nigga:
-    \begin{equation}
-        \sum F = ma      
-    \end{equation}
+    \section{Introduction} % and personal engagement
+    \section{Background theory}
+    \section{Modelling}
+
     
 
 \end{document}
