--- a/math-ia-fistDraft.tex
+++ b/math-ia-fistDraft.tex
@@ -35,19 +35,32 @@
             \break
             {\large A Mathematical exploration}
             \break
+            \small{Written by Johan-Petter R. Dragic}
             {\date{06.11.2018}}
             
 
                 % ADD BREAK HERE
+            \vspace{20mm}
+            \includegraphics[scale=0.4]{pic1.jpg}
+            % source pic2: https://gisgeography.com/polar-orbit-sun-synchronous-orbit/
+            
 
-            \includegraphics[scale=0.32]{pic1.jpg}
-            \vspace{10pt}
-            \vfill
         \end{center}
     \end{titlepage}
 
+    \tableofcontents
+    \thispagestyle{empty}
+    \newpage
+    
+
+    \addtocounter{page}{-1}
     \section{Introduction} % and personal engagement
+        \subsection{Personal engagement}
+
+
+
     \section{Background theory}
+        \subsection{What are orbits}
     \section{Modelling}
 
     
