--- a/math-ia-fistDraft.tex
+++ b/math-ia-fistDraft.tex
@@ -31,8 +31,9 @@
 
     \begin{titlepage}
         \begin{center}
-            {\LARGE Determining the optimal orbit of polar satellites}
+            {\LARGE Mathematically determining the orbit of the I.S.S using its ground tracks}
             \break
+            \\
             {\large A Mathematical exploration}
             \break
             \small{Written by Johan-Petter R. Dragic}
@@ -41,7 +42,7 @@
 
                 % ADD BREAK HERE
             \vspace{20mm}
-            \includegraphics[scale=0.4]{pic1.jpg}
+            \includegraphics[scale=1.5]{iss2.jpg}
             % source pic2: https://gisgeography.com/polar-orbit-sun-synchronous-orbit/
             
 
@@ -52,9 +53,10 @@
     \thispagestyle{empty}
     \newpage
     
-
+ 
     \addtocounter{page}{-1}
     \section{Introduction} % and personal engagement
+    The International Space Station (commonly referred to as the ISS)
         \subsection{Personal engagement}
 
 
