--- a/math-ia-fistDraft.tex
+++ b/math-ia-fistDraft.tex
@@ -56,7 +56,10 @@
  
     \addtocounter{page}{-1}
     \section{Introduction} % and personal engagement
-    The International Space Station (commonly referred to as the ISS)
+    The International Space Station (commonly referred to as the ISS) is a man-made, habitable satellite developed in a joint venture among five agencies: NASA (USA), 
+    Rocosmos (Russia), JAXA (Japan), The European Space Agency, and the Canadian space agency. The first module was launched on the Russian "Proton" rocket in 1998, 
+    and the last module to be launched was the "International Docking Adatper-2", launched by the private company- SpaceX
+
         \subsection{Personal engagement}
 
 
