--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -11,7 +11,7 @@
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 
-\setlength{\baselineskip}{16.0pt}    % 16 pt usual spacing between lines
+\setlength{\baselineskip}{15.0pt}    % 16 pt usual spacing between lines
 
 \setlength{\parskip}{3pt plus 2pt}
 \setlength{\parindent}{20pt}
@@ -31,17 +31,17 @@
 
     \begin{titlepage}
         \begin{center}
-            {\LARGE Mathematically determining the orbit of the I.S.S using its ground tracks}
+            {\LARGE A Mathematical Modelling of the \\ Falcon 9 Hover Slam}
             \break
             \\
-            {\large A Mathematical exploration}
+            {\large A Mathematical Exploration}
             \break
-            \small{Written by Johan-Petter R. Dragic}
-            {\date{06.11.2018}}
+            %\small{Written by Johan-Petter R. Dragic}
+           % \date{06.11.2018}
             
 
                 % ADD BREAK HERE
-            \vspace{20mm}
+            \vspace{14mm}
             \includegraphics[scale=1.5]{iss2.jpg}
             % source pic2: https://gisgeography.com/polar-orbit-sun-synchronous-orbit/
             
@@ -58,7 +58,14 @@
     \section{Introduction} % and personal engagement
     The International Space Station (commonly referred to as the ISS) is a man-made, habitable satellite developed in a joint venture among five agencies: NASA (USA), 
     Rocosmos (Russia), JAXA (Japan), The European Space Agency, and the Canadian space agency. The first module was launched on the Russian "Proton" rocket in 1998, 
-    and the last module to be launched was the "International Docking Adatper-2", launched by the private company- SpaceX
+    and the last module to be launched was the "International Docking Adatper-2", launched by the private company- SpaceX in July 2016.
+
+
+
+
+
+        
+
 
         \subsection{Personal engagement}
 
