added new pic and removed old shit

--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -31,7 +31,7 @@
 
     \begin{titlepage}
         \begin{center}
-            {\LARGE A Mathematical Modelling of the \\ Falcon 9 Hover Slam}
+            {\LARGE A Mathematical Modelling of the \\ Hover Slam Manuever}
             \break
             \\
             {\large A Mathematical Exploration}
@@ -42,7 +42,7 @@
 
                 % ADD BREAK HERE
             \vspace{14mm}
-            \includegraphics[scale=1.5]{iss2.jpg}
+            \includegraphics[scale=0.17]{hoverslam2.jpg}
             % source pic2: https://gisgeography.com/polar-orbit-sun-synchronous-orbit/
             
 
@@ -56,18 +56,18 @@
  
     \addtocounter{page}{-1}
     \section{Introduction} % and personal engagement
-    The International Space Station (commonly referred to as the ISS) is a man-made, habitable satellite developed in a joint venture among five agencies: NASA (USA), 
-    Rocosmos (Russia), JAXA (Japan), The European Space Agency, and the Canadian space agency. The first module was launched on the Russian "Proton" rocket in 1998, 
-    and the last module to be launched was the "International Docking Adatper-2", launched by the private company- SpaceX in July 2016.
+    % The International Space Station (commonly referred to as the ISS) is a man-made, habitable satellite developed in a joint venture among five agencies: NASA (USA), 
+    % Rocosmos (Russia), JAXA (Japan), The European Space Agency, and the Canadian space agency. The first module was launched on the Russian "Proton" rocket in 1998, 
+    % and the last module to be launched was the "International Docking Adatper-2", launched by the private company- SpaceX in July 2016.
 
-
+    
 
 
 
         
 
 
-        \subsection{Personal engagement}
+        % \subsection{Personal engagement}
 
 
 
