--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -31,7 +31,7 @@
 
     \begin{titlepage}
         \begin{center}
-            {\LARGE A Mathematical Exploration of the \\ Hover Slam Manuever}
+            {\LARGE A Mathematical Modelling of the \\ Hover Slam Manuever}
             \break
             \\
             {\large A Mathematical Exploration}
@@ -51,19 +51,12 @@
 
     \tableofcontents
     \thispagestyle{empty}
-    \addtocounter{page}{-1}
-    
-    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% START OF DOCUMENT
     \newpage
-    \section{Introduction} % and personal engagement
-    On December 21st, 2015. SpaceX, the privately owned space company, successfully landed their orbital-class rocket back at their launch site in Cape Canaveral, Florida. 
-    This is considered by some to be the next major advancement towards making humans an interplanetary species. Elon Musk, the founder and CEO of the company 
-    intends to achieve "plane-like" levels of rapid reusability of rockets, in hopes that this will help propel humans towards Mars. 
-    \\
-    SpaceX has since then, successfully landed their first stage rocket boosters a total of \textbf{\underline{XX}} times, both at land and on a barrage in the ocean.
-
     
-
+ 
+    \addtocounter{page}{-1}
+    \section{Introduction} % and personal engagement
+    
     
 
 
