--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -56,40 +56,33 @@
     \thispagestyle{empty}
     \addtocounter{page}{-1}
     
-
+    % USE THIS: https://www.reddit.com/r/spacex/comments/4jeerf/mathematical_analysis_of_a_singleengine_hoverslam/
     
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%    START OF DOCUMENT    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
     \newpage
     \section{Introduction} % and personal engagement
-    On December 21st, 2015. SpaceX, the privately owned space company, successfully landed their orbital-class rocket, the \textit{Falcon 9}, back at their launch site in Cape Canaveral, Florida. 
-    This is considered by some to be the next major advancement towards making humans an interplanetary species. Elon Musk, the founder and CEO of the company 
-    intends to achieve "plane-like" levels of rapid reusability of rockets, in hopes that this will help propel humans towards Mars. 
+        On December 21st, 2015. SpaceX, the privately owned space company, successfully landed their orbital-class rocket, the \textit{Falcon 9}, back at their launch site in Cape Canaveral, Florida. 
+        This is considered by some to be the next major advancement towards making humans an interplanetary species. Elon Musk, the founder and CEO of the company 
+        intends to achieve "plane-like" levels of rapid reusability of rockets, in hopes that this will help propel humans towards Mars. 
     \\
-    SpaceX has since then, successfully landed their first stage rocket boosters a total of \textbf{\underline{XX}} times, both at land and on a barrage in the ocean. 
+        SpaceX has since then, successfully landed their first stage rocket boosters a total of \textbf{\underline{XX}} times, both at land and on a barrage in the ocean. 
     \\ 
-    I still vividly remember the moment my heart skipped a beat as the rocket landed, and my previous passion for spaceflight was reignited.
+        I still vividly remember the moment my heart skipped a beat as the rocket landed, and my previous passion for spaceflight was reignited.
     \paragraph{}
-    With my passion at it's peak I began playing the video game "Kerbal Space Program", a game described as a "Spaceflight sandbox". In the game, you design your own rockets and 
-    control their maneuvering as you like. After watching the Falcon 9 land I started recrating the rocket in the game. 
-    I then quickly realized how complicated it was to preform a propulsive landing of its first stage. The complexity of the landing intrigued me. 
-    And as I eventually learned how to adjust the timing and thrust of the engines I figured it would be easier to create a script that will do this for me, much like this is done in real life.
+        With my passion at it's peak I began playing the video game "Kerbal Space Program", a game described as a "Spaceflight sandbox". In the game, you design your own rockets and 
+        control their maneuvering as you like. After watching the Falcon 9 land I started recrating the rocket in the game. 
+        I then quickly realized how complicated it was to preform a propulsive landing of its first stage. The complexity of the landing intrigued me. 
+        And as I eventually learned how to adjust the timing and thrust of the engines I figured it would be easier to create a script that will do this for me, much like this is done in real life.
     \break
-    One of the hardships I encountered was to figure out how to determine when I was going to fire my engines to perform this so-called "hover slam" manuever (also called the "suicide burn")
+        One of the hardships I encountered was to figure out how to determine when I was going to fire my engines to perform this so-called "hover slam" manuever 
+        (also called the "suicide burn"). \\
+        I therefore decided to dedicated my Mathematics IA to exploring this topic and figuring out how to achieve a perfect and autonomous landing.
 
     
 
-
-
-        
-
-
-        % \subsection{Personal engagement}
-
-
-
     \section{Background theory}
         \subsection{What are orbits}
-    \section{Modelling}
+    \section{Modelling} 
 
     
 
