--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -1,11 +1,12 @@
 \documentclass[12pt]{article}
 
-\usepackage{amsmath}    % need for subequations
+\usepackage{amsmath}    % need for sub-equations
 \usepackage{graphicx}   % need for figures
 \usepackage{verbatim}   % useful for program listings
 \usepackage{color}      % use if color is used in text
 \usepackage{subfigure}  % use for side-by-side figures
 \usepackage{hyperref}   % use for hypertext links, including those to external documents and URLs
+% \usepackage[showframe]{geometry} % remove gay indentation 
 
 
 \usepackage{graphicx} % use for images
@@ -21,6 +22,7 @@
 \setlength{\marginparwidth}{2.5cm}
 \setlength{\marginparpush}{1.0cm}
 \setlength{\textwidth}{150mm}
+
 
 \begin{comment}
 \pagestyle{empty} % doesn't count for page numbers
@@ -61,28 +63,50 @@
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%    START OF DOCUMENT    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
     \newpage
     \section{Introduction} % and personal engagement
-        On December 21st, 2015. SpaceX, the privately owned space company, successfully landed their orbital-class rocket, the \textit{Falcon 9}, back at their launch site in Cape Canaveral, Florida. 
+    \paragraph{}
+        %%%%
+        % Work more on the opening paragraph
+        %%%%
+        On December 21st, 2015. SpaceX, the privately owned space company, successfully landed the booster stage (Also referred to as the first stage) of the \textit{Falcon 9} back at their launch site in Cape Canaveral, Florida.
         This is considered by some to be the next major advancement towards making humans an interplanetary species. Elon Musk, the founder and CEO of the company 
         intends to achieve "plane-like" levels of rapid reusability of rockets, in hopes that this will help propel humans towards Mars. 
     \\
-        SpaceX has since then, successfully landed their first stage rocket boosters a total of \textbf{\underline{XX}} times, both at land and on a barrage in the ocean. 
+        SpaceX has since then, successfully landed their first stage rocket boosters a total of \textbf{XX} times, both at land and on a barrage in the ocean. 
     \\ 
         I still vividly remember the moment my heart skipped a beat as the rocket landed, and my previous passion for spaceflight was reignited.
-    \paragraph{}
+    \paragraph{\noindent}
         With my passion at it's peak I began playing the video game "Kerbal Space Program", a game described as a "Spaceflight sandbox". In the game, you design your own rockets and 
         control their maneuvering as you like. After watching the Falcon 9 land I started recrating the rocket in the game. 
         I then quickly realized how complicated it was to preform a propulsive landing of its first stage. The complexity of the landing intrigued me. 
         And as I eventually learned how to adjust the timing and thrust of the engines I figured it would be easier to create a script that will do this for me, much like this is done in real life.
     \break
         One of the hardships I encountered was to figure out how to determine when I was going to fire my engines to perform this so-called "hover slam" manuever 
-        (also called the "suicide burn"). \\
+        (also called the "suicide burn").
+    \paragraph{\noindent}
         I therefore decided to dedicated my Mathematics IA to exploring this topic and figuring out how to achieve a perfect and autonomous landing.
 
     
 
     \section{Background theory}
-        \subsection{What are orbits}
-    \section{Modelling} 
+        \subsection{The manuever}
+        \paragraph{}
+        Before one can begin to explore the mathematics behind the manuever, it is important to understand what a hover slam is.
+        The Manuever can be broken down into \textbf{3} phases: 
+            
+
+    \noindent{\textbf{Step 1: The Pre-Entry Phase}}
+
+
+    This is the phase before the spacecraft enters the denser part of the atmosphere. What happens in this phase is the orientation, boost-back burn, and the entry-burn
+    The purpose of this stage is to prepare the booster for 
+    
+    \noindent{\textbf{Step 2: The Entry Phase}}
+
+    \noindent{\textbf{Step 3: The Landing Phase}}
+    The hover slam is a term for a Manuever in which the spacecraft awaits the retro-grade firing to slow it self down so that a landing with an intanct spacecraft can take place of its 
+
+    The more slang-like term of the hover slam: the "suicide burn" explains the consequence that occurs if the manuever was not completed successfully,
+    
 
     
 
