--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -7,7 +7,7 @@
 \usepackage{subfigure}  % use for side-by-side figures
 \usepackage{hyperref}   % use for hypertext links, including those to external documents and URLs
 % \usepackage[showframe]{geometry} % remove gay indentation 
-\usepackage{gensymb} % allows me to use fancy symbols in-text
+% \usepackage{gensymb} % allows me to use fancy symbols in-text
 
 
 \usepackage{graphicx} % use for images
@@ -16,7 +16,7 @@
 \setlength{\baselineskip}{16.0pt}    % 16 pt usual spacing between lines
 
 \setlength{\parskip}{3pt plus 2pt}
-\setlength{\parindent}{20pt}
+\setlength{\parindent}{20pt}    
 \setlength{\oddsidemargin}{0.5cm}
 \setlength{\evensidemargin}{0.5cm}
 \setlength{\marginparsep}{0.75cm}
@@ -100,10 +100,15 @@
 
     This is the phase before the spacecraft enters the denser part of the atmosphere. What happens in this phase is the orientation, boost-back burn, and the entry-burn
     The purpose of this stage is to prepare the booster for immense mechanical stress of entering the atmosphere at high speeds, and to align it's ballistic trajectory towards its desired landing location
-    In most cases, this require a "boost-back" burn, where the rocket could either turn its trajectory 180^{\circ} back to the launch site. 
+    In most cases, this require a "boost-back" burn, where the rocket turns its trajectory 180{$^\circ $} and heads back to the launch site. 
     
+    \noindent See illustration 1 for a visual representation.
     
-    See illustration 1 for a visual representation.
+    % sexy image commence:
+    \begin{center}
+        \includegraphics[scale=0.5]{Trajectory-landing.png}
+    \end{center}
+
     
     \noindent{\textbf{Step 2: The Entry Phase}}
 
