--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -40,7 +40,7 @@
             % \small{Mathematics SL, IA:} \\
             \Huge{A Mathematical Exploration of the \\ Hover Slam Manuever}
             \break
-            {\large A Mathematical Exploration}
+            {\large A Mathematics Internal Assessment}
             \break
             %\small{Written by Johan-Petter R. Dragic}
            % \date{06.11.2018}
@@ -101,19 +101,32 @@
     This is the phase before the spacecraft enters the denser part of the atmosphere. What happens in this phase is the orientation, boost-back burn, and the entry-burn
     The purpose of this stage is to prepare the booster for immense mechanical stress of entering the atmosphere at high speeds, and to align it's ballistic trajectory towards its desired landing location
     In most cases, this require a "boost-back" burn, where the rocket turns its trajectory 180{$^\circ $} and heads back to the launch site. 
+    After the boost-back burn is complete the rocket re-orients itself to the retrograde position and fires it's engines right before hitting the denser part of the atmosphere. This is done to slow it down enough so that it will be able to survive the heavy the external forces caused by the atmosphere.
     
-    \noindent See illustration 1 for a visual representation.
+    \noindent See Figure 1.1 for a visual representation.
     
     % sexy image commence:
     \begin{center}
+
         \includegraphics[scale=0.5]{Trajectory-landing.png}
     \end{center}
+
+
+    \paragraph{\noindent}
+    It is to be noted that when landing on a barrage at sea, a significantly smaller boost-back burn is required. Though, the scope of this exploration will not focus on this stage and assume that a rocket, is leaving this stage with a set mass, {$m_\circ$}, and velocity, {$U_\circ$}.
 
     
     \noindent{\textbf{Step 2: The Entry Phase}}
 
+    In this phase, the rocket tries to navigate through the atmosphere through the use of its extendable "Grid fins" % (seen in Figure 1.2). 
+    What is critical here is to note that the rocket gets drastically slowed down by by the gradually denser air as it enters the atmosphere.
+    
+
+
+    % \includegraphics[scale=0.5]{grid-fins.jpg}
+
     \noindent{\textbf{Step 3: The Landing Phase}}
-    The hover slam is a term for a Manuever in which the spacecraft awaits the retro-grade firing to slow it self down so that a landing with an intanct spacecraft can take place of its 
+    The hover slam is a term for a Manuever in which the spacecraft awaits the retro-grade firing to slow it self down so that a landing with an intact spacecraft can take place of its 
 
     The more slang-like term of the hover slam: the "suicide burn" explains the consequence that occurs if the manuever was not completed successfully,
     
