--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -20,9 +20,10 @@
 \setlength{\oddsidemargin}{0.5cm}
 \setlength{\evensidemargin}{0.5cm}
 \setlength{\marginparsep}{0.75cm}
-\setlength{\marginparwidth}{2.5cm}s
+\setlength{\marginparwidth}{2.5cm}
 \setlength{\marginparpush}{1.0cm}
 \setlength{\textwidth}{150mm}
+\linespread{1.25}
 
 
  \begin{comment}
@@ -32,12 +33,10 @@
         
 \begin{document}
         
-        \title{A Mathematical Exploration of the Hover Slam Manuever}
-        \date{25.10.2018}
         \author{Candiate code: hjk123}            \begin{titlepage}
                 \begin{center}
                   % \small{Mathematics SL, IA:} \\
-                \Huge{A Mathematical Exploration of the \\ Decay of Caffine}
+                \Huge{A Mathematical Exploration of the \\ Decay of Caffeine}
                 \break
                 {\large A Mathematics Internal Assessment}
                 \break                    %\small{Written by Johan-Petter R. Dragic}
@@ -56,14 +55,43 @@
             \thispagestyle{empty}
             \addtocounter{page}{-1}
             
+        %     Structure:
+        %             1. Introduction
+        %                 purpose and aim, personal engagement
+        %             2. Collection of data
+        %                 Experimental methods
+                                % Simulation
+
 
 
             %%%%%%%%%%%%%%%%%%%%%%%%%%%%%    START OF DOCUMENT    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
             \newpage
             \section{Introduction} % and personal engagement
-            \paragraph
+            \paragraph{}
                 Coffee has become an integral part of many lives, including mine. It's what wakes you up in the morning and sustains your energy-levels throughout the day. The leading chemical stimulant in coffee is called caffeine and it's classified as a "Psychoactive drug", meaning that it alters the chemical processes that goes on in your brain. The main effect of caffeine is to alter the brain's perception of when it's tired, and is the reason why I and many others admire this mild drug. And since the world average amount of sleep lies bellow the hourly optimum, it is no wonder why caffeine consumed to such extents as it is today.
                 \\
-                Caffeine is usually consumed through mediums such as tea, coffee and energy drinks (Redbull etc.) and due to the ease of consumption  
+                Due to the psychoactive effects of caffeine on tiredness many advice to not drink caffeine-containing beverages 3 hours before bed, but how did they come to this conclusion?
+                
+
+
+                \noindent The purpose of this math IA is therefore to explore the decay of caffeine with the aim of figuring out how early before bed you can dink your last cup of coffee without it affecting your sleep.
+
+
+
+        \section{Data collection}
+        \paragraph{}
+                Much like radioactive elements in physics, caffeine follows the same pattern that alpha decay does, meaning that it has a half-life. A Half-life in the realm of nuclear physics is defined as time taken for the radioactive activity of an element to halve itself. So if we were to have a sample of the element Plutonium-238 has an initial activity of $1$ and a half life of 2 hours. Then if you then wait for 2 hours, the activity is now going to be {$\frac{1}{2}$}. I have therefore concluded to use computer simulations as my data collection, and since there are no available simulations specifically for caffeine I will collect data from a simple python program which will apply the principles of the half-life (Raw code is attached to the appendix). 
+                
+                \noindent the table bellow shows the result of the collection
+
+                % Inserting table
+                \begin{center}
+                        \begin{tabular}{c c c c c}
+                                
+                        \end{tabular}
+                \end{center}
+                
+
+        
 \end{document}
 
