--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -90,7 +90,7 @@
                 This is subject to errors made by the original writer but for the sake of this exploration we will assume that his findings hold true. 
                 
                 \noindent
-                Since the aim of this exploration is  to determine how early before bed you can drink your last cup of coffee, we will take assume that the person drinking is at the lower echelon of caffeine decomposition, and caffeine wil therefore have a half-life of \textit{5 hours}. 
+                Since he aim of this exploration is  to determine how early before bed you can drink your last cup of coffee, we will take assume that the person drinking is at the lower echelon of caffeine decomposition, and caffeine wil therefore have a half-life of \textit{5 hours}. 
                 
                 \noindent the table bellow shows the simulation output. A note to the data is that the simulation will not calculate for values down to the absolute 0, but rather down do a 0 value of 0.01 (15 data points). This is due to the nature of Mathematics when continuously dividing. (the last output of the simulation before it returned 0.0 was $4.95\times 10^-324$)
 
@@ -119,7 +119,7 @@
                         
                 \end{center}
                 
-
+                
         
 \end{document}
 
