--- a/math-ia-firstDraft.tex
+++ b/math-ia-firstDraft.tex
@@ -119,7 +119,33 @@
                         
                 \end{center}
                 
+                The data above can be plotted on a scatter-graph and is shown below.
                 
+                \begin{center}
+                        \includegraphics[scale=0.8]{table1.png}
+                \end{center}
+
+                But we'd like to draw a line of best fit on the graph, do do that we must use the points and data given to calculate. It's apparent that it's an exponential function due to its initial curve sloping down and getting closer and closer to zero. 
+
+                \section{Determining a function}
+
+                As discussed in the previous section, it seems like the data follows an exponential path, and since it's a downward sloping curve it's fair to assume that its exponent is negative.
+                
+                \noindent
+                We can observe that the rate of decay is dependant on the amount of substance left. We can therefore assume that there's a proportionality between the initial amount of substance,$N_\Theta$, and the amount decayed, $N$. 
+
+                \noindent 
+                We can express this Mathematically as follows:
+                
+                        $$\frac{\delta N}{\delta t} = -\lambda N_\Theta $$
+
+                Where $\frac{\delta N}{\delta t}$ is the change in the substance over a change in time, which is just another way of saying "How much decayed over X amount of time". This must be proportional to the initial amount of the substance, but for the proportionality to work out we need a \textit{proportionality constant}, which is this case is $\lambda$ (this is also known as the decay constant). 
+                \noindent
+                We know all the values except the decay constant, $\lambda$. This can be mathematically solved.
+
+
+                \noindent
+                By looking at our original equation we can see that it is possible to set it up as a \textit{differential equation} and solve for 
         
 \end{document}
 
